# Twitter_Crewai

./: dummy_tweets.json
main/twittercrew/: README.md  pyproject.toml
main/twittercrew/src/twittercrew/: crew.py  main.py  report.md
main/twittercrew/src/twittercrew/config/: agents.yaml  tasks.yaml
main/twittercrew/src/twittercrew/tools/: custom_tool.py
