[project]
name = "twittercrew"
version = "0.1.0"
description = "TwitterCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
twittercrew = "twittercrew.main:run"
run_crew = "twittercrew.main:run"
train = "twittercrew.main:train"
replay = "twittercrew.main:replay"
test = "twittercrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
